sumo/tests/traci/VariableRetrieval/Polygon/errors/UnsupportedVariable/testclient.prog
simstep 5 1
getvariable 0xa8 0xff dummy
simstep 6 1
